# pos-rs

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yml  sqlx-data.json
.github/workflows/: general.yml
migrations/: 20220819104151_create_users.down.sql  20220819104151_create_users.up.sql  20220819104216_create_products.down.sql  20220819104216_create_products.up.sql  20220819104305_create_transactions.down.sql  20220819104305_create_transactions.up.sql
migrations/2022-06-12-111524_create_users/: down.sql  up.sql
migrations/2022-06-17-074457_create_products/: up.sql
migrations/2022-06-17-075345_create_transactions/: down.sql  up.sql
src/: db.rs  errors.rs  jwt.rs  lib.rs  main.rs  model.rs  models.rs  schema.rs  startup.rs
src/db/: connection.rs  mod.rs  products.rs  transactions.rs  users.rs
src/handlers/: auth.rs  configuration.rs  mod.rs  products.rs  transactions.rs  users.rs
src/models/: auth.rs  mod.rs  product.rs  response.rs  transaction.rs  user.rs
src/validation/: error.rs  mod.rs
src/validation/validators/: mod.rs  range.rs  required.rs  strings.rs
