[package]
name = "pos-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
bcrypt = "0.13.0"
chrono = { version = "0.4.19", features = ["serde"] }
derive_more = "0.99.17"
diesel = { version = "1.4.8", features = ["postgres", "uuidv07", "r2d2", "chrono", "numeric"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
jsonwebtoken = "8"
r2d2 = "0.8.9"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }
actix-web-httpauth = "0.6.0"
bigdecimal = { version = "0.1.2", features = ["serde"] }
diesel-derive-enum = { version = "1.1.2", features = ["postgres"] }
actix-session = { version = "0.6.2", features = ["redis-rs-session"] }
secrecy = "0.8.0"
futures-util = "0.3.21"
actix-identity = "0.5.2"
