[package]
edition = "2021"
name = "pos-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
bcrypt = "0.13.0"
bigdecimal = {version = "0.3.0", features = ["serde"]}
chrono = {version = "0.4.19", features = ["serde"]}
deadpool-redis = "0.10.2"
derive_more = "0.99.17"
dotenvy = "0.15.1"
env_logger = "0.9.0"
futures-util = "0.3.21"
jsonwebtoken = "8"
redis = "0.21.5"
secrecy = "0.8.0"
serde = {version = "1.0", features = ["derive"]}
sha2 = "0.10.2"
sqlx = {version = "0.6", features = ["runtime-actix-native-tls", "postgres", "uuid", "bigdecimal", "chrono", "offline"]}
uuid = {version = "1.1.2", features = ["v4", "serde"]}
